--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
-name: Build #name
-on: # directive
-  workflow_dispatch: # Trigger - allows to run the workflow manually from github
-  push: # Trigger - push
+name: Build 
+on: 
+  workflow_dispatch: 
+  push: 
     branches: [main]
-  pull_request: # Trigger - PR
+  pull_request: 
     branches: [main]
