github action version information

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,21 @@
 name: Build 
+
 on: 
   workflow_dispatch: 
   push: 
     branches: [ main ]
   pull_request: 
     branches: [ main ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+jobs:
+  build:
+    name: Build and test
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+      - name: show current version of Xcode
+        run: xcodebuild -version
