--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,9 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
+      - name: List available Xcode versions
+        run: ls /Applications | grep Xcode
+      - name: Set up Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
       - name: show current version of Xcode
         run: xcodebuild -version
