--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,7 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_15.2.app/Contents/Developer
       - name: show current version of Xcode
         run: xcodebuild -version
+      - name: Show SDKs
+        run: xcodebuild -showsdks
       - name: Run Tests
         run: ./run_tests.sh
